--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 dependencies {
     def activityVersion = '1.1.0'
     implementation "androidx.activity:activity-ktx:$activityVersion"
+    def roomVersion = '2.2.5'
+    implementation "androidx.room:room-ktx:$roomVersion"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
