--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ContactApp">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.ContactActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.ContactApp.NoActionBar">
             <intent-filter>
