--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,21 @@
         android:theme="@style/Theme.ContactApp">
         <activity
             android:name=".ui.ContactActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/contact_activity_name"
+            android:theme="@style/Theme.ContactApp.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.CreateModifyContactActivity"></activity>
+        <activity
+            android:name=".ui.CreateModifyContactActivity"
+            android:label="@string/cm_contact_activity_name"
+            android:theme="@style/Theme.ContactApp.NoActionBar"></activity>
     </application>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
