--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.2.0'
 
+    // Fragment for activityViewModels()
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+
     // Android KTX
     implementation 'androidx.core:core-ktx:1.3.1'
 
