--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
             android:name=".ui.newModifyContact.CreateModifyContactActivity"
             android:label="@string/cm_contact_activity_name"
             android:theme="@style/Theme.ContactApp.NoActionBar"></activity>
+
+        <activity
+            android:name=".ui.detailsContact.DetailsContactActivity"
+            android:label="@string/details_contact_activity_name"
+            android:theme="@style/Theme.ContactApp.NoActionBar"></activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
